5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1582_1559.log
== TEST (2019-03-14 17:54:44) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:54:49) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(frase.)
-- ERROR:
File "XXXX", line 2
    print(frase.)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:55:07) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print("frase")
-- OUTPUT:
frase
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:55:52) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(frase. ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA)
-- ERROR:
File "XXXX", line 2
    print(frase. ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:41:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print( .upper)
-- ERROR:
File "XXXX", line 2
    print( .upper)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 09:28:29) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.162717
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
